
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int printf (char*) ;
 int read_data (int,char*,char) ;

int read_bind_result(int sock)
{
 char buf[1000];

 read_data(sock, buf, 2);
 if (buf[0] != 0x30) {

  return -1;
 }

 read_data(sock, &buf[2], buf[1]);

 if ((buf[2] != 0x02) && (buf[3] != 0x01)) {
  printf("Malformed bind result\n");
  exit(1);
 }

 if (buf[5] != 0x61) {
  printf("Malformed bind result\n");
  exit(1);
 }

 if (buf[6] < 7) {
  printf("Malformed bind result\n");
  exit(1);
 }

 if ((buf[7] != 0x0a) && (buf[8] != 0x01)) {
  printf("Malformed bind result\n");
  exit(1);
 }

 return buf[9];
}
